--- a/exercise-serie-1/exercise-6/style.css
+++ b/exercise-serie-1/exercise-6/style.css
@@ -1,13 +1,11 @@
-/* body{
-    /* width: 900px; 
-  }
-   */
+
   
   #deck{
     display: flex;
     justify-content: center;
     justify-content: space-evenly;
     flex-wrap: wrap;
+    margin-bottom: 30px;
   }
   
   .centering{
